✨ Implementación completa de menú visual por categorías y flujo de pedidos para mesero

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,7 +6,7 @@
   <title>Dashboard Admin - Santobocado</title>
 
   <!-- ✅ Verificación de sesión -->
-  <script defer src="../shared/verificarSesion.js" data-rol="admin"></script>
+  <script src="/shared/verificarSesion.js" data-rol="admin"></script>
 
   <!-- ✅ Funcionalidades del panel -->
   <script defer src="admin_resumen.js"></script>
