--- a/admin/menu_admin.html
+++ b/admin/menu_admin.html
@@ -6,7 +6,7 @@
   <title>Editar Menú - Santobocado</title>
 
   <!-- 🧠 Seguridad: verificación de sesión -->
-  <script defer src="../shared/verificarSesion.js" data-rol="admin"></script>
+  <script src="/shared/verificarSesion.js" data-rol="admin"></script>
 
   <!-- 📦 Sistema modular de menú -->
   <script type="module" defer src="menu_eventos.js"></script>
