--- a/cocina/cocina.html
+++ b/cocina/cocina.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 
   <!-- 🛡️ Verificación de sesión para rol cocina -->
-  <script defer src="../shared/verificarSesion.js" data-rol="cocinero"></script>
+ <script src="/shared/verificarSesion.js" data-rol="cocinero"></script>
 
   <!-- 🔄 Lógica dinámica de la cocina (pedidos activos, cambios de estado, etc.) -->
   <script type="module" defer src="cocina_eventos.js"></script>
