--- a/mesero/cuentas.html
+++ b/mesero/cuentas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gestión de Cuentas - Mesero</title>
-  <script defer src="../shared/verificarSesion.js" data-rol="mesero"></script>
+  <script src="/shared/verificarSesion.js" data-rol="mesero"></script>
   <script type="module" defer src="cuentas_eventos.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
