--- a/admin/promociones.html
+++ b/admin/promociones.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
 
   <!-- 🔒 Seguridad y lógica -->
-  <script defer src="../shared/verificarSesion.js" data-rol="admin"></script>
+  <script src="/shared/verificarSesion.js" data-rol="admin"></script>
   <script type="module" defer src="promo_eventos.js"></script>
 </head>
 
